...
        String lastName = last_name_input.getText().toString().trim();
        String email = email_input.getText().toString().trim();
        String phone = phone_input.getText().toString().trim();
        String password = password_input.getText().toString().trim();

        if (TextUtils.isEmpty(firstName)) {
            first_name_input.setError("First name is required");
            first_name_input.requestFocus();
            return;
        }

        if (TextUtils.isEmpty(lastName)) {
            last_name_input.setError("Last name is required");
...
            password_input.setError("Password is required");
            password_input.requestFocus();
            return;
        }

        if (password.length() < 6) {
            password_input.setError("Password must be at least 6 characters");
            password_input.requestFocus();
            return;
        }

        if (TextUtils.isEmpty(email) && TextUtils.isEmpty(phone)) {
            Toast.makeText(this, "You must provide either an email or a phone number.", Toast.LENGTH_LONG).show();
...
